i've also copied the code in maps.js

--- a/styles/index.css
+++ b/styles/index.css
@@ -34,7 +34,7 @@ body {
     border-radius: 8px;
     border-color: #4adec3;
     color: #fffff0;
-    font-family: inherit;
+    font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 5px 20px;
     width: 100px;
